# disaster_management-

./: .gitignore  README.md
backend-cpp/: CMakeLists.txt  dijkstra.cpp  dijkstra.hpp  graph.cpp  graph.hpp  resources.cpp  resources.hpp  wrapper.cpp
flask-api/: app.py  py_backend.py
frontend/: allocate.html  cities.html  emergency.html  index.html  login.html  logs.html  map.html  requests.html  roads.html  signup.html
